<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recoveryCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/card_color"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_max="488dp">

        <LinearLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="40dp"
            android:paddingHorizontal="30dp"
            android:orientation="vertical"
            android:gravity="center"
            android:animateLayoutChanges="true"> <TextView
            android:id="@+id/screenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recoveryTitle"
            android:textColor="@color/title_color"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainer"
                style="@style/GameHubInput"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEdit"
                    android:inputType="textEmailAddress"
                    android:hint="@string/emailEdit"
                    android:textStyle="italic"
                    android:textColorHint="@color/main_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/codeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"> <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/insertCodeLayout"
                style="@style/GameHubInput"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/codeEdit"
                    android:inputType="number"
                    android:hint="@string/codeEdit"
                    android:textStyle="italic"
                    android:textColorHint="@color/main_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/newPasswordGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"> <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPasswordLayout"
                style="@style/GameHubInput"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPasswordEdit"
                    android:inputType="textPassword"
                    android:hint="@string/newPassword"
                    android:textStyle="italic"
                    android:textColorHint="@color/main_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordLayout"
                    style="@style/GameHubInput"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPasswordEdit"
                        android:inputType="textPassword"
                        android:hint="@string/confirmPassword"
                        android:textStyle="italic"
                        android:textColorHint="@color/main_color"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/actionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/main_color"
                android:text="@string/sendCode"
                android:textColor="@color/main_text_color"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>