<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/signInCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/card_color"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_max="488dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="40dp"
        android:paddingHorizontal="30dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerTitle"
            android:textColor="@color/title_color"
            android:textSize="32sp"
            android:textStyle="bold">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInput"
            android:background="@android:color/transparent"
            style="@style/GameHubInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPersonName"
                android:id="@+id/nameEdit"
                android:hint="@string/registerNickname"
                android:textStyle="italic"
                android:textColorHint="@color/main_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerEmail"
            android:background="@android:color/transparent"
            style="@style/GameHubInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:id="@+id/registerEmailInput"
                android:hint="@string/registerEmail"
                android:textStyle="italic"
                android:textColorHint="@color/main_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            style="@style/GameHubInput"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/passwordEdit"
                android:hint="@string/registerPassword"
                android:textStyle="italic"
                android:textColorHint="@color/main_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordInput"
            style="@style/GameHubInput"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/confirmPasswordEdit"
                android:hint="@string/confirmPassword"
                android:textStyle="italic"
                android:textColorHint="@color/main_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:backgroundTint="@color/main_color"
            android:text="@string/signUpButton"
            android:textColor="@color/main_text_color"
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        </Button>

    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>